# PPOCRv6

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
include/ppocr/: base64.h  config.h  http_request.h  http_server.h  logger.h  metrics.h  ocr_engine.h  ocr_postprocess.h  request_queue.h  usage.h
src/: base64.cpp  config.cpp  http_request.cpp  http_server.cpp  logger.cpp  main.cpp  metrics.cpp  ocr_engine.cpp  ocr_postprocess.cpp  request_queue.cpp  usage.cpp
tests/: test_main.cpp
